# newton-fractal.rs

./: .gitignore  Cargo.toml  README.md
src/: complex_simd.rs  draw.rs  edge.rs  main.rs  newton.rs  polynomial.rs
