[package]
name = "newton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
num = "0.4.0"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[dependencies.rug]
version = "1.13"
default-features = false
features = ["float", "complex"]

[profile.release]
debug = true
